Got all necessary data from form to Python, now just need to validate then push changes to database

--- a/project/saga/templates/saga/create.html
+++ b/project/saga/templates/saga/create.html
@@ -30,14 +30,14 @@ Allow the user to edit a faction and its units if one is supplied
         <!--Faction Form Fields-->
         <label for = "fName">Name:</label>
         <!--autoescape to read spaces in the faction name-->
-        <input type = "text" id = "fName" value = "{% autoescape off %}{{faction.first.name}}{% endautoescape %}">
+        <input type = "text" id = "fName" name = "fName" value = "{% autoescape off %}{{faction.first.name}}{% endautoescape %}">
         <br><br>
         <div style="display: flex; flex-direction: column;">
             <label for = "fDescription">Description:</label>
-            <textarea id = "fDescription" rows = "5", cols = "30">{{faction.first.description}}</textarea>
+            <textarea id = "fDescription" name = "fDescription" rows = "5", cols = "30">{{faction.first.description}}</textarea>
             <br>
             <label for = "fSpecial">Special Rules:</label>
-            <textarea id = "fSpecial" rows = "5", cols = "30">{{faction.first.specialRules}}</textarea>
+            <textarea id = "fSpecial" name = "fSpecial" rows = "5", cols = "30">{{faction.first.specialRules}}</textarea>
         </div>
 
         <br>
