--- a/project/saga/static/saga/style.css
+++ b/project/saga/static/saga/style.css
@@ -69,5 +69,20 @@ textarea{
     width: 175px;
 }
 
+/*Navigation Button Box*/
+.navBox{
+    justify-content: center;
+    align-items: left;
+    gap:10px;
+}
+
+/*Navigation Buttons*/
+.navBox button {
+    width: 150px;
+    height: 50px;
+    font-size: 16px;
+    margin: 0 10px;
+}
+
 
 
