--- a/project/saga/templates/saga/index.html
+++ b/project/saga/templates/saga/index.html
@@ -33,7 +33,7 @@ Allow the user to redirect to the:
         </div>
     </nav>
     <header>
-        <h1>Saga Army Builder Home Page</h1>
+        <h1>Saga Faction Builder Home Page</h1>
     </header>
 
     <p1>Welcome to the Saga Faction Builder.
