added sagaoptions.json to create.js, continuing testing

--- a/project/saga/templates/saga/create.html
+++ b/project/saga/templates/saga/create.html
@@ -15,7 +15,7 @@ Allow the user to create a faction and its units
     <title>Saga Faction Create/Edit</title>
     <meta charset="utf-8">
     <meta name = "description" content = "The Saga Faction Create/Edit page is to create or edit a faction">
-    <script src = {% static 'saga/create.js'%}></script>
+    <script src = {% static 'saga/create.js'%} data-options-file = {% static 'saga/sagaoptions.json' %}></script>
 </head>
 
 <body>
