--- a/project/saga/templates/saga/create.html
+++ b/project/saga/templates/saga/create.html
@@ -15,7 +15,7 @@ Allow the user to create a faction and its units
     <title>Saga Faction Create/Edit</title>
     <meta charset="utf-8">
     <meta name = "description" content = "The Saga Faction Create/Edit page is to create or edit a faction">
-    <script src = {% static 'saga/create.js'%}></script>
+    <script type = "module" src = {% static 'saga/create.js'%}></script>
 </head>
 
 <body>
@@ -57,6 +57,7 @@ Allow the user to create a faction and its units
         <div style = "width: 75%; margin: 0 auto;">
             <!--Buttons To Add Units To The Table-->
             <div class = "addButtonBox">
+                <!--Buttons will be enabled after data is pulled from the JSON file-->
                 <button class = "addButton" type = "button" id = "addHero" onclick = "addUnit('Hero')"> Add Hero</button>
                 <button class = "addButton" type = "button" id = "addHearthguard" onclick = "addUnit('Hearthguard')"> Add Hearthguard</button>
                 <button class = "addButton" type = "button" id = "addWarrior" onclick = "addUnit('Warrior')"> Add Warrior</button>
