added JSON implementation to edit faction page and js

--- a/project/saga/templates/saga/edit.html
+++ b/project/saga/templates/saga/edit.html
@@ -17,7 +17,7 @@ Allow the user to edit a faction and its units if one is supplied
     <title>Saga Faction Create/Edit</title>
     <meta charset="utf-8">
     <meta name = "description" content = "The Saga Faction Create/Edit page is to create or edit a faction">
-    <script src = {% static 'saga/edit.js'%}></script>
+    <script type = "module" src = {% static 'saga/edit.js'%}></script>
 </head>
 
 <body>
